@@ -34,9 +34,9 @@ namespace input
 
         /// Initializes this manager with a chosen input source.
         /** \param mBlock  The owner pointer control block
-        *   \param pSource The input source
+        *   \param mSource The input source
         */
-        explicit manager(utils::control_block& mBlock, std::unique_ptr<source> pSource);
+        explicit manager(utils::control_block& mBlock, source& mSource);
 
         // Non-copiable, non-movable
         manager(const manager&) = delete;
@@ -217,31 +217,6 @@ namespace input
         */
         void unregister_event_emitter(gui::event_emitter& mEmitter);
 
-        /// Retrieve a copy of the clipboard content.
-        /** \return A copy of the clipboard content (empty string is clipboard is empty).
-        */
-        utils::ustring get_clipboard_content();
-
-        /// Replace the content of the clipboard.
-        /** \param sContent The new clipboard content
-        */
-        void set_clipboard_content(const utils::ustring& sContent);
-
-        /// Sets the mouse cursor to a given image on disk.
-        /** \param sFileName The cursor image
-        *   \param mHotSpot The pixel position of the tip of the pointer in the image
-        *   \note Use reset_mouse_cursor() to set the cursor back to the default.
-        */
-        void set_mouse_cursor(const std::string& sFileName, const gui::vector2i& mHotSpot);
-
-        /// Sets the mouse cursor back to the default (arrow).
-        void reset_mouse_cursor();
-
-        /// Get the window size (in pixels)
-        /** \return The window size
-        */
-        const gui::vector2ui& get_window_dimensions() const;
-
         /// Sets the scaling factor applied to the interface.
         /** \param fScalingFactor The new scaling factor (default: 1)
         *   \note This is the conversion factor between UI units and pixels in the display.
@@ -253,15 +228,6 @@ namespace input
         /** \return The current interface scaling factor
         */
         float get_interface_scaling_factor() const;
-
-        /// Return the interface scaling factor suggested by the operating system.
-        /** \return The interface scaling factor suggested by the operating system
-        *   \note This is implementation-dependent; not all input implementations are able
-        *         to produce this hint, in which case the function always returns 1.
-        *         Consequently, it is recommended to not rely blindly on this hint, and
-        *         to offer a way for the user to change the scaling factor.
-        */
-        float get_interface_scaling_factor_hint() const;
 
         /// Returns the input source.
         /** \return The input source
@@ -299,7 +265,7 @@ namespace input
         bool          bMouseDragged_ = false;
         mouse_button  mMouseDragButton_ = mouse_button::LEFT;
 
-        std::unique_ptr<source> pSource_;
+        source& mSource_;
     };
 }
 }
